basic html and styling

--- a/src/app/components/basic-scroll/basic-scroll.component.html
+++ b/src/app/components/basic-scroll/basic-scroll.component.html
@@ -1,1 +1,7 @@
-<p>basic-scroll works!</p>
+<!-- takes one argument for the item size - essential when building vertical scroller -->
+<cdk-virtual-scroll-viewport itemSize="100">
+
+
+
+
+</cdk-virtual-scroll-viewport>
